tests/baselines/reference/checkJsdocOnEndOfFile.errors.txt
error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
eof.js(2,20): error TS2304: Cannot find name 'bad'.


!!! error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== eof.js (1 errors) ====
    /**
     * @typedef {Array<bad>} Should have error here
                       ~~~
!!! error TS2304: Cannot find name 'bad'.
     */
    